fix: Use min-width to prevent tab-and-view-container overflowing (instead of calc)

--- a/frontend/styles/pages/debug-view.css
+++ b/frontend/styles/pages/debug-view.css
@@ -67,6 +67,10 @@
     justify-content: space-between;
 
     height: 100%;
+    width: 100%;
+
+    box-sizing: border-box;
+
     padding: 2vh 1vw;
     gap: 1.25vw;
 
@@ -80,15 +84,7 @@
     flex-direction: column;
     
     width: 100%;
-}
-
-.tab-and-tree-view-container.left-compressed, 
-.tab-and-tree-view-container.right-compressed {
-    width: calc(100vw - 2vw - 18vw - 6vw - 1.25vw) !important;
-}
-
-.tab-and-tree-view-container.left-compressed.right-compressed {
-    width: calc(100vw - 2vw - 2 * (18vw + 6vw + 1.25vw)) !important;
+    min-width: 0;
 }
 
 .debug-view-page {
